--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    margin: 0;
+    min-height: 100vh;
 }
 
 @layer utilities {
